clusters/hml/gestor-gastro/middleware-strip-admin-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gestor-gastro-strip-admin-prefix
  namespace: umami-gestor-gastro-hml
spec:
  stripPrefix:
    prefixes:
      - /admin
