clusters/hml/gestor-gastro/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami-gestor-gastro-hml
  labels:
    app.kubernetes.io/part-of: umami-tech
    umami.tech/environment: hml
    umami.tech/managed-by: gitops
