clusters/hml/gestor-gastro/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestor-gastro-admin
  namespace: umami-gestor-gastro-hml
  labels:
    app.kubernetes.io/name: gestor-gastro-admin
    app.kubernetes.io/part-of: umami-tech
spec:
  type: ClusterIP
  selector:
    app: gestor-gastro-admin
  ports:
    - name: http
      port: 3000
      targetPort: 3000
