clusters/hml/gestor-gastro/service-shop.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestor-gastro-shop
  namespace: umami-gestor-gastro-hml
  labels:
    app.kubernetes.io/name: gestor-gastro-shop
    app.kubernetes.io/part-of: umami-tech
spec:
  type: ClusterIP
  selector:
    app: gestor-gastro-shop
  ports:
    - name: http
      port: 80
      targetPort: 80
